[gd_scene load_steps=20 format=3 uid="uid://h22sfjeyjx3b"]

[ext_resource type="Script" uid="uid://b6ivktixe4ody" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://bmt6ceey3cljn" path="res://Assets/Fonts/PixelOperator8-Bold.ttf" id="2_ce3w2"]
[ext_resource type="Texture2D" uid="uid://bwcgk8nbtyvk4" path="res://Assets/Sprites/menu_button.png" id="3_n45e2"]
[ext_resource type="Texture2D" uid="uid://cgwqdotpp12lo" path="res://Assets/Sprites/logo.png" id="4_ce3w2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_opfnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cp0ys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yhxw7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_14u15"]
atlas = ExtResource("3_n45e2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_trj04"]
texture = SubResource("AtlasTexture_14u15")
region_rect = Rect2(160, 0, 160, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjluv"]
atlas = ExtResource("3_n45e2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_16hvj"]
texture = SubResource("AtlasTexture_rjluv")
region_rect = Rect2(160, 0, 160, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ryr"]
atlas = ExtResource("3_n45e2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vr1f0"]
texture = SubResource("AtlasTexture_j3ryr")
region_rect = Rect2(0, 0, 160, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n45e2"]
atlas = ExtResource("4_ce3w2")
region = Rect2(0, 0, 315, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_opfnp"]
atlas = ExtResource("4_ce3w2")
region = Rect2(315, 0, 315, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp0ys"]
atlas = ExtResource("4_ce3w2")
region = Rect2(630, 0, 315, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhxw7"]
atlas = ExtResource("4_ce3w2")
region = Rect2(945, 0, 315, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_trj04"]
atlas = ExtResource("4_ce3w2")
region = Rect2(1260, 0, 315, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_16hvj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n45e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opfnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp0ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhxw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trj04")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_1ehe0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 416.0
color = Color(0, 0.121569, 0, 1)

[node name="PlayButton" type="Button" parent="."]
modulate = Color(0.266667, 0.988235, 0.611765, 1)
offset_left = 160.0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("2_ce3w2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_opfnp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cp0ys")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yhxw7")
theme_override_styles/hover = SubResource("StyleBoxTexture_trj04")
theme_override_styles/pressed = SubResource("StyleBoxTexture_16hvj")
theme_override_styles/normal = SubResource("StyleBoxTexture_vr1f0")
text = "Play Game"

[node name="OptionsButton" type="Button" parent="."]
modulate = Color(0.266667, 0.988235, 0.611765, 1)
offset_left = 160.0
offset_top = 304.0
offset_right = 320.0
offset_bottom = 328.0
theme_override_fonts/font = ExtResource("2_ce3w2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_opfnp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cp0ys")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yhxw7")
theme_override_styles/hover = SubResource("StyleBoxTexture_trj04")
theme_override_styles/pressed = SubResource("StyleBoxTexture_16hvj")
theme_override_styles/normal = SubResource("StyleBoxTexture_vr1f0")
text = "Options"

[node name="RulesButton" type="Button" parent="."]
modulate = Color(0.266667, 0.988235, 0.611765, 1)
offset_left = 160.0
offset_top = 352.0
offset_right = 320.0
offset_bottom = 376.0
theme_override_fonts/font = ExtResource("2_ce3w2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_opfnp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cp0ys")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yhxw7")
theme_override_styles/hover = SubResource("StyleBoxTexture_trj04")
theme_override_styles/pressed = SubResource("StyleBoxTexture_16hvj")
theme_override_styles/normal = SubResource("StyleBoxTexture_vr1f0")
text = "Rules"

[node name="Logo" type="AnimatedSprite2D" parent="."]
modulate = Color(0.266667, 0.988235, 0.611765, 1)
position = Vector2(240, 128)
sprite_frames = SubResource("SpriteFrames_16hvj")
autoplay = "default"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="RulesButton" to="." method="_on_rules_button_pressed"]
